plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'org.david'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
jar {
    manifest {
        attributes(
                'Main-Class': 'Main' // Replace with your real main class
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

dependencies {
    implementation 'org.jooq:jooq:3.20.4'
    implementation 'io.javalin.community.openapi:javalin-openapi-plugin:6.6.0'

    runtimeOnly 'io.agroal:agroal-pool:2.7.1'
    implementation 'io.agroal:agroal-api:2.7.1'
    implementation 'com.google.crypto.tink:tink:1.17.0'
    runtimeOnly 'org.postgresql:postgresql:42.7.3'
    implementation 'io.javalin:javalin-bundle:6.6.0'
    implementation 'io.javalin.community.routing:routing-dsl:6.6.0'
    implementation("org.slf4j:slf4j-simple:2.0.16")



    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.18.0'

    testImplementation 'io.javalin:javalin-bundle:6.6.0'

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}
test {
    useJUnitPlatform()
}